<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FUEL USAGE ANALYZER</string>
    <string name="disp_label_edit">EDIT MODE</string>
    <string name="disp_label_odo">METER VALUE(ODO OR HOUR)</string>
    <string name="disp_label_famount">FUEL AMOUNT</string>
    <string name="disp_label_price">FUEL PRICE</string>
    <string name="disp_btn_save">SAVE</string>
    <string name="disp_btn_fwd">FORWARD</string>
    <string name="disp_btn_bwd">BACKWARD</string>
    <string name="disp_label_per_price">PRICE PER UNIT</string>
    <string name="conf_act_err_notnull">YOU NEED TO FILL ALL BLANKS</string>
    <string name="conf_act_err_char">YOU NEED INPUT NUMBER</string>
    <string name="conf_act_save_msg">SAVED</string>
    <string name="menu_reset">DELETE ALL RECORDS</string>
    <string name="menu_detail">FUEL USAGE DETAIL</string>
    <string name="menu_chart">FUEL USAGE CHART</string>
    <string name="menu_new">RECORD NEW DATA</string>
    <string name="menu_edit">EDIT PAST DATA</string>
    <string name="menu_trans">EXPORT FUEL USAGE RECORDS</string>
    <string name="menu_msg_reset">ARE YOU SURE TO DELETE RECORDS?</string>
    <string name="menu_msg_save_log">SAVE FUEL USAGE RECORDS</string>
    <string name="detail_latest_fill_date">LAST FILL DATE:</string>
    <string name="detail_latest_odo">LAST METER:</string>
    <string name="detail_latest_amount">LAST FILL AMOUNT:</string>
    <string name="detail_latest_price">LAST FILL PRICE:</string>
    <string name="detail_latest_per_price">LAST PRICE PER UNIT:</string>
    <string name="detail_meter_dif">LAST METER DIFFERENCE:</string>
    <string name="detail_fuel_economy">LAST FUEL ECONOMY:</string>
    <string name="detail_total_count">TOTAL FILL COUNT:</string>
    <string name="detail_total_meter_dif">TOTAL METER DIFFERENCE:</string>
    <string name="detail_total_amount">TOTAL FILL AMOUNT:</string>
    <string name="detail_total_price">TOTAL FILL PRICE:</string>
    <string name="detail_average_fuel_economy">AVERAGE FUEL ECONOMY:</string>
    <string name="detail_average_fill_amount">AVERAGE FILL AMOUNT:</string>
    <string name="detail_average_fill_price">AVERAGE FILL PRICE:</string>
    <string name="detail_average_per_price">AVERAGE PRICE PER UNIT:</string>
    <string name="detail_currency"></string>
    <string name="detail_unit"></string>
    <string name="chart_dif">METER DIFFERENCE</string>
    <string name="chart_amount">FUEL AMOUNT</string>
    <string name="chart_price">FUEL PRICE</string>
    <string name="chart_ppu">PRICE PER UNIT</string>
    <string name="chart_fe">FUEL ECONOMY</string>
    <string name="chart1_title">METER DIFFERENCE</string>
   	<string name="chart1_x">DATE</string>
   	<string name="chart1_y">METER DIFFERENCE</string>
   	<string name="chart1_plot">METER DIFFERENCE</string>
    <string name="chart2_title">FUEL AMOUNT</string>
   	<string name="chart2_x">DATE</string>
   	<string name="chart2_y">FUEL AMOUNT</string>
   	<string name="chart2_plot">FUEL AMOUNT</string>
    <string name="chart3_title">FUEL PRICE</string>
   	<string name="chart3_x">DATE</string>
   	<string name="chart3_y">FUEL PRICE</string>
   	<string name="chart3_plot">FUEL PRICE</string>
    <string name="chart4_title">PRICE PER UNIT</string>
   	<string name="chart4_x">DATE</string>
   	<string name="chart4_y">PRICE PER UNIT</string>
   	<string name="chart4_plot">PRICE PER UNIT</string>
    <string name="chart5_title">FUEL ECONOMY</string>
   	<string name="chart5_x">DATE</string>
   	<string name="chart5_y">FUEL ECONOMY</string>
   	<string name="chart5_plot">FUEL ECONOMY</string>
</resources>